--- a/b2b_ecommerce/views/templates.xml
+++ b/b2b_ecommerce/views/templates.xml
@@ -22,23 +22,6 @@
                     </t>
                     <t t-esc="combination_info['price']"
                        t-options="{'widget': 'monetary', 'display_currency': website.currency_id}"/>
-
-
-                    <!--                   -->
-                    <!--                    <span t-esc="product.website_price"-->
-                    <!--                          t-options="{'widget': 'monetary', 'display_currency': website.currency_id}"/>-->
-                    <!--                    <span itemprop="price" style="display:none;" t-esc="product.website_price"/>-->
-                    <!--                    <span itemprop="priceCurrency" style="display:none;" t-esc="website.currency_id.name"/>-->
-                    <!--                    <t t-set="website_price"-->
-                    <!--                       t-value="product._website_price"/>-->
-                    <!--                    <span t-esc="product._website_price"-->
-                    <!--                          t-options="{'widget': 'monetary', 'display_currency': website.currency_id}"/>-->
-                    <!--                    <span itemprop="price" style="display:none;" t-esc="product.website_price"/>-->
-                    <!--                    <span itemprop="priceCurrency" style="display:none;" t-esc="website.currency_id.name"/>-->
-                    <!--                    <t t-if="website.get_current_pricelist()">-->
-                    <!--                        <t t-esc="product.website_price"-->
-                    <!--                           t-options="{'widget': 'monetary', 'display_currency': website.get_current_pricelist().currency_id, 'from_currency': website.currency_id}"/>-->
-                    <!--                    </t>-->
                 </b>
             </div>
         </xpath>
@@ -53,26 +36,28 @@
         </xpath>
     </template>
 
-    <template id="products_add_to_cart" inherit_id="b2b_ecommerce.products_item" active="False"
-              customize_show="True" name="Add to Cart">
-        <xpath expr="//div[hasclass('product_price')]" position="inside">
+    <template id="website_sale.products_add_to_cart" inherit_id="website_sale.products_item" active="False"
+              customize_show="True"
+              name="Add to Cart">
+
+
+        <xpath expr="//div[hasclass('o_wsale_product_btn')]" position="inside">
+            <t t-set="b2b_hide_add_cart"
+               t-value="env['ir.config_parameter'].sudo().get_param('b2b_ecommerce.b2b_hide_add_cart')"/>
             <t t-set="btn_flag" t-value="True"/>
             <t t-if="user_id.partner_id.name == 'Public user' and b2b_hide_add_cart == 'True'">
                 <t t-set="btn_flag" t-value="False"/>
             </t>
-            <input name="product_id" t-att-value="product.product_variant_id.id" type="hidden"/>
-            <t t-if="len(product.product_variant_ids) == 1 and btn_flag">
-                <a class="btn btn-default btn-xs a-submit">
-                    <span class="fa fa-shopping-cart"/>
-                </a>
-            </t>
-            <t t-if="len(product.product_variant_ids) &gt; 1 and btn_flag">
-                <a class="btn btn-default btn-xs"
-                   t-att-href="keep('/shop/product/%s' % slug(product), page=(pager['page']['num'] if pager['page']['num']&gt;1 else None))">
+            <t t-set="product_variant_id" t-value="product._get_first_possible_variant_id()"/>
+            <input name="product_id" t-att-value="product_variant_id" type="hidden"/>
+            <t t-if="product_variant_id and btn_flag">
+                <a href="#" role="button" class="btn btn-secondary a-submit" aria-label="Shopping cart"
+                   title="Shopping cart">
                     <span class="fa fa-shopping-cart"/>
                 </a>
             </t>
         </xpath>
+
     </template>
 
     <template id="product" name="Product" inherit_id="website_sale.product">
@@ -87,6 +72,7 @@
             <t t-set="btn_flag" t-value="True"/>
             <t t-if="user_id.partner_id.name == 'Public user' and b2b_hide_add_cart == 'True'">
                 <t t-set="btn_flag" t-value="False"/>
+
             </t>
             <a id="add_to_cart" class="btn btn-primary btn-lg mt8 js_check_product a-submit" href="#" t-if="btn_flag">
                 Add to Cart
@@ -104,6 +90,12 @@
                 <br/>
                 Buy now, get in 2 days
             </p>
+            <h3>My Wishlist</h3>
+            <div class="checkbox">
+                <label class='text-muted'><input type="checkbox" id='b2b_wish' value="1" class="mr8"/>Add product to my
+                    cart but keep it in my wishlist
+                </label>
+            </div>
         </xpath>
     </template>
 
@@ -112,5 +104,78 @@
             <attribute name="t-if">not user_id.partner_id.name == 'Public user'</attribute>
         </xpath>
     </template>
+    <template id="product_wishlist" name="Wishlist Page" inherit_id="website_sale_wishlist.product_wishlist">
+        <xpath expr="//div[hasclass('checkbox')]" position="replace">
+
+            <t t-set="flag_2" t-value="True"/>
+            <t t-set="b2b_hide_price"
+               t-value="env['ir.config_parameter'].sudo().get_param('b2b_ecommerce.b2b_hide_price')"/>
+            <t t-if="user_id.partner_id.name == 'Public user'">
+                <t t-if="b2b_hide_price == 'True'">
+                    <t t-set="flag_2" t-value="False"/>
+                </t>
+            </t>
+            <div class="checkbox" t-if="flag_2">
+                <label class='text-muted'><input type="checkbox" id='b2b_wish' value="1" class="mr8"/>Add product to my
+                    cart but
+                    keep it in my wishlist
+                </label>
+            </div>
+        </xpath>
+        <xpath expr="//table/body/t/tr/td[3]"
+               position="replace">
+            <t t-set="flag_3" t-value="True"/>
+            <t t-if="user_id.partner_id.name == 'Public user'">
+                <t t-if="b2b_hide_price == 'True'">
+                    <t t-set="flag_3" t-value="False"/>
+
+                </t>
+            </t>
+            <td t-if="flag_3">
+                <t t-set="combination_info" t-value="wish.product_id._get_combination_info_variant()"/>
+                <t t-esc="combination_info['price']"
+                   t-options="{'widget': 'monetary', 'display_currency': website.pricelist_id.currency_id}"/>
+            </td>
+        </xpath>
+        <xpath expr="//table/body/t/tr/td[4]"
+               position="replace">
+            <t t-set="flag_3" t-value="True"/>
+            <t t-if="user_id.partner_id.name == 'Public user'">
+                <t t-if="b2b_hide_price == 'True'">
+                    <t t-set="flag_3" t-value="False"/>
+
+                </t>
+            </t>
+
+            <td class='text-center td-wish-btn' t-if="flag_3">
+                <input name="product_id" t-att-value="wish.product_id.id" type="hidden"/>
+                <button type="button" role="button" class="btn btn-secondary btn-block o_wish_add mb4">Add
+                    <span class='d-none d-md-inline'>to Cart</span>
+                </button>
+            </td>
+        </xpath>
+    </template>
+    <template id="website_sale.header_cart_link" name="Header Cart Link">
+        <t t-set="website_sale_order" t-value="website.sale_get_order()"/>
+        <t t-set="show_cart" t-value="true"/>
+        <li t-attf-class="#{_item_class} divider d-none"/> <!-- Make sure the cart and related menus are not folded (see autohideMenu) -->
+        <t t-set="b2b_hide_add_cart"
+           t-value="env['ir.config_parameter'].sudo().get_param('b2b_ecommerce.b2b_hide_add_cart')"/>
+        <t t-set="btn_flag" t-value="True"/>
+        <t t-if="user_id.partner_id.name == 'Public user' and b2b_hide_add_cart == 'True'">
+            <t t-set="btn_flag" t-value="False"/>
+        </t>
+        <li t-if="btn_flag" t-attf-class="o_wsale_my_cart #{not show_cart and 'd-none'} #{_item_class}">
+            <a href="/shop/cart" t-attf-class="#{_link_class}">
+                <i t-if="_icon" class="fa fa-shopping-cart"/>
+                <span t-if="_text">My Cart</span>
+                <sup class="my_cart_quantity badge badge-primary"
+                     t-esc="website_sale_order and website_sale_order.cart_quantity or '0'"
+                     t-att-data-order-id="website_sale_order and website_sale_order.id or ''"/>
+            </a>
+        </li>
+
+    </template>
+
 
 </odoo>
