--- a/b2b_ecommerce/views/res_config_settings_views.xml
+++ b/b2b_ecommerce/views/res_config_settings_views.xml
@@ -27,11 +27,12 @@
                         <div class="o_setting_right_pane">
                             <label for="b2b_hide_add_cart"/>
                             <div class="text-muted">
-                               Hide 'Add to Cart' selection from not logged-in users
+                                Hide 'Add to Cart' selection from not logged-in users
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-12 col-md-6 o_setting_box" id="b2b_hide_common_text_setting" title="check to hide common promises from not logged-in users.">
+                    <div class="col-xs-12 col-md-6 o_setting_box" id="b2b_hide_common_text_setting"
+                         title="check to hide common promises from not logged-in users.">
                         <div class="o_setting_left_pane">
                             <field name="b2b_hide_common_text" widget="checkbox"/>
                         </div>
