--- a/b2b_ecommerce/views/templates.xml
+++ b/b2b_ecommerce/views/templates.xml
@@ -81,22 +81,16 @@
             <t t-if="user_id.partner_id.name == 'Public user' and b2b_hide_common_text == 'True'">
                 <t t-set="text_flag" t-value="False"/>
             </t>
-            <!--            <p class="text-muted" t-if="text_flag">-->
-            <!--                30-day money-back guarantee-->
-            <!--                <br/>-->
-            <!--                Free Shipping in U.S.-->
-            <!--                <br/>-->
-            <!--                Buy now, get in 2 days-->
-            <!--            </p>-->
+
             <t t-if="text_flag">
                 <xpath expr="//div[@id='product_details']/p[@class='text-muted']" position="replace">
-                    <h3>My Wishlist</h3>
-                    <div class="checkbox">
-                        <label class='text-muted'><input type="checkbox" id='b2b_wish' value="1" class="mr8"/>Add
-                            product to my
-                            cart but keep it in my wishlist
-                        </label>
-                    </div>
+                    <p class="text-muted" t-if="text_flag" >
+
+                <a href="/shop/terms">Terms and Conditions</a><br/>
+                30-day money-back guarantee<br/>
+                Shipping: 2-3 Business Days
+                    </p>
+
                 </xpath>
             </t>
         </xpath>
